# cram_ai4hri

./: Readme.md
ai4hri_description/: CMakeLists.txt  package.xml
ai4hri_description/meshes/: Shelf_0.dae
ai4hri_description/urdf/: dm_shelves.urdf.xacro  pepper.urdf
cram_ai4hri_demo/: CMakeLists.txt  cram-pepper-demo.asd  package.xml  readme.md
cram_ai4hri_demo/src/: cram-plans.lisp  package.lisp  projection-demo.lisp  setup.lisp  shelf-prolog.lisp
cram_ai4hri_pepper_description/: CMakeLists.txt  cram-ai4hri-pepper-description.asd  package.xml
cram_ai4hri_pepper_description/src/: arms.lisp  general-knowledge.lisp  neck.lisp  package.lisp
