<?xml version="1.0"?>
<package format="2">
  <name>ai4hri_description</name>
  <version>1.0.0</version>
  <description>The ai4hri_description package</description>
 
  <maintainer email="gsathou@univ-bremen.de">Guillaume Sarthou</maintainer>
 
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>urdf</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
 
  <build_export_depend>urdf</build_export_depend>
 
  <exec_depend>urdf</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
 
</package>