<package format="2">
  <name>cram_ai4hri_pepper_description</name>
  <version>0.7.0</version>
  <description>
    Prolog predicates describing pepper robot
  </description>
  <author>Guillaume Sarthou</author>
  <maintainer email="gsarthou@uni-bremen.de">Guillaume Sarthou</maintainer>
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
 
  <depend>cram_prolog</depend>
  <depend>cram_robot_interfaces</depend>
  <depend>cram_location_costmap</depend>
</package> 